--- a/style.css
+++ b/style.css
@@ -7,7 +7,17 @@ html {
     box-sizing: inherit;
 }
 
+.body {
+    background-image: url(money.jpg);
+    background-size: cover 100%;
+    background-repeat: no-repeat;
+    background-attachment: scroll ;
+}
+
 .article {
+    background-image: url(fon.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
     margin: 10px auto 10px auto;
     text-align: center;
     padding: 10px;
@@ -17,7 +27,7 @@ html {
     max-width: 500px;
     width: 80%;
     max-height: 300px;
-    box-shadow: 2px 1px 7px #333;
+    box-shadow: 2px 1px 17px #222;
 }
 
 .form__input {
@@ -36,9 +46,11 @@ html {
     margin-left: -5px;
     border-radius: 0px 20px 20px 0px;
 }
+
 .form__select--type2 {
-    background-color:#ddd ;
+    background-color: #ddd;
 }
+
 .form__input:disabled {
     background-color: #ddd;
     color: black;
