--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@ html {
 }
 
 .body {
-    background-image: img\url(money.jpg);
+    background-image: url(img/money.jpg);
     background-size: cover 100%;
     background-repeat: no-repeat;
     background-attachment: scroll ;
 }
 
 .article {
-    background-image: img\url(fon.png);
+    background-image: url(img/fon.png);
     background-repeat: no-repeat;
     background-size: 100%;
     margin: 10px auto 10px auto;
