--- a/style.css
+++ b/style.css
@@ -9,45 +9,51 @@ html {
 
 .body {
     background-image: url(img/money.jpg);
-    background-size: cover 100%;
+    margin: 0;
+    background-size: 190vmax;
     background-repeat: no-repeat;
-    background-attachment: scroll ;
+    height: auto;
 }
 
 .article {
     background-image: url(img/fon.png);
-    background-repeat: no-repeat;
     background-size: 100%;
-    margin: 10px auto 10px auto;
+    margin: 10px auto;
     text-align: center;
     padding: 10px;
     background-color: teal;
     color: rgb(255, 255, 255);
-    border-radius: 20px;
+    border-radius: 30px;
     max-width: 500px;
     width: 80%;
     max-height: 300px;
-    box-shadow: 2px 1px 17px #222;
+    box-shadow: 2px 1px 10px rgb(12, 12, 12);
 }
 
 .form__input {
     text-align: center;
+    vertical-align: middle;
     max-width: 180px;
-    width: 100%;
     border-width: 0.2px;
     border-radius: 5px;
-    height: 40px;
+    height: 100%;
     border-radius: 20px 0px 0px 20px;
 }
 
 .form__select {
-    border-radius: 5px;
-    height: 50px;
+    background-color:white;
+    vertical-align: middle;
+    border-width: 0.2px;    
+    height: calc(100% + 3px);;
     margin-left: -5px;
-    border-radius: 0px 20px 20px 0px;
+    border-radius: 2px 20px 20px 2px;
 }
 
-.form__select--type2 {
+.form__paragraf {
+    height: 35px
+}
+
+.form__select--backgroundColorGrey {
     background-color: #ddd;
 }
 
